# command-not-found

./: .gitignore  Makefile  README.md  bisect.c  bisect.h  bisect.zig  command-not-found.8  command-not-found.c  command-not-found.h  command-not-found.spec  command-not-found.zig  macro.h  meson.build  pts_lbsearch.c  pts_lbsearch.h  rb.c  rb.h  test  update-command-not-found  update-command-not-found-fedora.rb  update-command-not-found.8  update-command-not-found.c  update-command-not-found.h  update-command-not-found.rb  util.c  util.h  zsh_command_not_found
debian/: 50-command-not-found  changelog  control  copyright  dirs  install  manpages  postinst  postrm  rules
po/: command-not-found-ace.po  command-not-found-af.po  command-not-found-am.po  command-not-found-an.po  command-not-found-ar.po  command-not-found-ast.po  command-not-found-az.po  command-not-found-be.po  command-not-found-bg.po  command-not-found-br.po  command-not-found-bs.po  command-not-found-ca.po  command-not-found-ca@valencia.po  command-not-found-ce.po  command-not-found-cs.po  command-not-found-csb.po  command-not-found-cy.po  command-not-found-da.po  command-not-found-de.po  command-not-found-el.po  command-not-found-en_AU.po  command-not-found-en_CA.po  command-not-found-en_GB.po  command-not-found-eo.po  command-not-found-es.po  command-not-found-et.po  command-not-found-eu.po  command-not-found-fa.po  command-not-found-fa_AF.po  command-not-found-fi.po  command-not-found-fil.po  command-not-found-fo.po  command-not-found-fr.po  command-not-found-fr_CA.po  command-not-found-gl.po  command-not-found-gn.po  command-not-found-gu.po  command-not-found-he.po  command-not-found-hi.po  command-not-found-hr.po  (+58 more)
