project('command-not-found', 'c')
executable('command-not-found', 'command-not-found.c', 'command-not-found.h',
	'util.c', 'util.h', 'bisect.c', 'bisect.h', install: true, install_dir : 'lib')
executable('update-command-not-found', 'update-command-not-found.c', 'update-command-not-found.h',
	'util.c', 'util.h', 'rb.c', 'rb.h', install: true, install_dir : 'sbin')

